Bug 566331 - [Passage] API revision
fixed review issues

Signed-off-by: Nikifor Fedorov <zelenyhleb@gmail.com>